[package]
name = "rs-uuid"
version = "0.3.1"
authors = ["jhaboic <josiphaboic@gmail.com>"]
edition = "2021"
description = "Universally unique identifier generator"
license = "Apache-2.0"
repository = "https://github.com/BitFields/rs-uuid"
keywords = ["uuid", "generator", "uuid8", "uuid16", "uuid32"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
hex = "0.4.0"
